preview pages: get rid of content jumps when subnav -> subnav-fixed

--- a/css/bootswatch.css
+++ b/css/bootswatch.css
@@ -24,6 +24,10 @@ section {
 	font-size: 54px;
 }
 
+.subhead > div:first-child {
+	min-height: 200px;
+}
+
 .subnav {
 	margin-bottom: 60px;
 	width: 100%;
